debued  - realize suggestion  - set startbutton to correct text/color when controler resumed  - null service valiable when stop  - now service keeps and sends initial value to controler